# giant-mixins

./: .gitignore  LICENSE  README.md  pyproject.toml  settings.py  setup.cfg
mixins/: __init__.py  admin.py  fields.py  models.py  search_indexes.py  views.py
mixins/tests/: conftest.py  settings.py  test_fields.py  test_giant_mixins.py  test_models.py
tests/: test_giant_mixins.py
