[tool.poetry]
name = "giant-mixins"
version = "0.3.4"
description = "A mixins app that provides some standard mixins for Giant projects"
authors = ["Will-Hoey <will.hoey@giantmade.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/giantmade/giant-mixins"
repository = "https://github.com/giantmade/giant-mixins"
keywords = ["mixins", "app"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]
packages = [
    { include = "mixins" }
]

[tool.poetry.dependencies]
python = "^3.6"
django-cms = {version = "^3.7.3", optional = true}
django-filer = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
django = "2.2"
django-polymorphic = "3.0.0"

[tool.poetry.extras]
cms = ["django-cms"]

[[tool.poetry.source]]
name = "TestPyPi"
url = "https://test.pypi.org/simple/"
secondary = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

